--- a/apps/shmardrive/manifest.json
+++ b/apps/shmardrive/manifest.json
@@ -2,7 +2,7 @@
   "manifest": "arweave/paths",
   "version": "0.2.0",
   "index": {
-    "path": "manifest-overrides.json"
+    "path": "index.html"
   },
   "paths": {
     "splash/img/old-splash.svg": {
